# WeCFU

./: .dockerignore  .gitignore  DEPLOY_HF.md  Dockerfile  GITHUB_SETUP.md  INSTALL.md  LICENSE  README.md  README_HF.md  SHARE.md  USAGE.md  environment.yml  meta.yaml  pyproject.toml
cfu_counter/: cli.py  pipeline.py  sam_refine.py  segment.py
cfu_counter/server/static/: index.html
hardware/: README.md  model.3mf
tests/: test_naming.py
wecfu/: __init__.py  cli.py  naming.py  overlay.py  pipeline.py  plate.py  sam_refine.py  segment.py
wecfu/server/: app.py  web.py
wecfu/server/static/: app.js  i18n.js  index.html  styles.css
