[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecfu"
version = "0.1.0"
description = "WeCFU — hybrid OpenCV + SAM CFU counter for culturomics plate photos with a local web GUI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "WeF culturomics team" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python-headless",
    "pillow",
    "pandas",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.optional-dependencies]
sam = ["segment-anything", "torch"]
dev = ["pytest"]

[project.scripts]
wecfu = "wecfu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wecfu*"]

[tool.setuptools.package-data]
"wecfu.server" = ["static/*"]
