[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecfu"
version = "0.1.2"
description = "WeCFU — a friendly, interactive, web-based colony counter for petri dish photos"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "WeF culturomics team" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "opencv-python-headless",
    "pillow",
    "pandas",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.optional-dependencies]
sam = ["segment-anything", "torch"]
dev = ["pytest"]

[project.scripts]
wecfu = "wecfu.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wecfu*"]

[tool.setuptools.package-data]
"wecfu.server" = ["static/*"]
